--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-markdown": "^10.1.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
+    "resend": "^6.0.1",
     "smoothscroll-polyfill": "^0.4.4"
   },
   "devDependencies": {
